--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-Revision history for Perl extension MooseToMouse
+Revision history for Perl extension Any::Moose::Convert
 
 0.001 Sat Nov 28 07:41:31 2009
     - original version; created by Module::Setup
