--- a/README
+++ b/README
@@ -1,11 +1,11 @@
-This is Perl module MooseToMouse.
+This is Perl module Any::Moose::Convert.
 
 INSTALLATION
 
-MooseToMouse installation is straightforward. If your CPAN shell is set up,
+Any::Moose::Convert installation is straightforward. If your CPAN shell is set up,
 you should just be able to do
 
-    $ cpan MooseToMouse
+    $ cpan Any::Moose::Convert
 
 Download it, unpack it, then build it as per the usual:
 
@@ -18,9 +18,9 @@ Then install it:
 
 DOCUMENTATION
 
-MooseToMouse documentation is available as in POD. So you can do:
+Any::Moose::Convert documentation is available as in POD. So you can do:
 
-    $ perldoc MooseToMouse
+    $ perldoc Any::Moose::Convert
 
 to read the documentation online with your favorite pager.
 
